<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.my_app_portfolio.MainActivity"
    android:orientation="vertical">

    <TextView android:id="@+id/tv_my_nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/title_padding"
        android:paddingRight="@dimen/title_padding"
        android:paddingBottom="@dimen/title_padding"
        android:text="@string/my_nanodegree_apps"
        android:textSize="@dimen/title_textsize"
        android:textColor="@color/black"/>

    <Button android:id="@+id/btn_popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

    <Button android:id="@+id/btn_stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

    <Button android:id="@+id/btn_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

    <Button android:id="@+id/btn_make_your_app_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

    <Button android:id="@+id/btn_go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

    <Button android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:layout_marginLeft="@dimen/button_horizontal_margin"
        android:layout_marginRight="@dimen/button_horizontal_margin"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:onClick="showMessage" />

</LinearLayout>
